--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -6,7 +6,7 @@
     <%= f.submit '保存' %>
   <% end %>
 
-<div>
+
   <div class='calendar'>
     <% @week_days.each do |day| %>
       <div class='item'>
@@ -14,7 +14,7 @@
           <%= "#{day[:month]}/#{day[:date]}" %>
         </div>
         <ul class='content'>
-        <% if day[:plans].present? %>
+        <% if day[:plans].length != 0 %>
           <% day[:plans].each do |plan| %>
             <li class='plan-list'>・<%= plan %></li>
           <% end %>
@@ -23,4 +23,3 @@
       </div>
     <% end %>
   </div>
-</div>
